--- a/css/bbs.css
+++ b/css/bbs.css
@@ -82,3 +82,20 @@ table td{
   width:100%;
   display: block;
 }
+.pagenation ul{
+  display: flex;
+  justify-content: center;
+  gap:10px;
+  margin:2em auto;
+}
+.pagenation ul li a{
+  display: block;
+  padding: 5px 8px;
+  background: #ebebeb;  
+  font-size: 1.2em;
+  text-decoration: none;
+}
+.pagenation ul li a.active{
+  background: #3498db;
+  color: #fff;
+}
